# jupyterEnv

./: .gitignore  flake.nix
kernels/datasci/: default.nix  overrides.nix  pyproject.toml
