[tool.poetry]
name = "datasci"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "*"
tensorflow = { version = "^2.11.0", python = ">=3.10,<3.11" }
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
